--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -8,6 +8,9 @@
                             <h4 class="card-title"> Employee List</h4>
                         </div>
                         <div class="ml-md-auto">
+                            <button type="Add" class="btn btn-danger btn-round" routerLink="/dashboard">
+                                <i class="fa fa-arrow-left"></i> Back
+                            </button>
                             <button type="Add" class="btn btn-info btn-round" (click)="addEmployee()">
                                 <i class="fa fa-plus"></i> Add Employee
                             </button>
