--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -21,7 +21,7 @@
                         <div class="form-group" [ngClass]="{ 'form-group-focus': focus === true }">
                             <input type="text" class="form-control" id="name" name="name"
                                 [(ngModel)]="servicesModel.name" placeholder=" Enter Service Name " required value=""
-                                pattern="^[a-zA-Z0-9 !@#$%.^&*)(]{2,20}$" (focus)="focus = true" #name="ngModel" />
+                                pattern="[#\d+ ([^,]+), ([A-Z]{2}) (\d{5})]" (focus)="focus = true" #name="ngModel" />
                         </div>
                         <div *ngIf="name.errors && (name.dirty || name.touched)" class="alert alert-danger">
                             <div *ngIf="name.errors.required">
@@ -114,7 +114,22 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title"> Services List</h4>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h4 class="card-title"> Services List</h4>
+                        </div>
+                        <div class="ml-md-auto">
+                            <label class="col-form-label" style="margin-top: 5px;font-size: 18px;color: black;">Search
+                                By</label>
+                        </div>
+                        <div class="col-md-3 ml-md-auto">
+                            <div class="form-group" style="margin-top: 8px !important;">
+                                <input type="search" id="form1" class="form-control"
+                                    placeholder="Service Name" [(ngModel)]="search"
+                                    (keyup)="searchServicesList($event.target.value)" aria-label="Search" />
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -129,7 +144,7 @@
                             </thead>
                             <tbody>
                                 <tr
-                                    *ngFor="let item of servicesList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+                                    *ngFor="let item of services | paginate: { itemsPerPage: 10, currentPage: p }; let i = index">
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.name}} </td>
                                     <td class="text-center">{{ item.price }} ₹</td>
