--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -25,13 +25,13 @@
       <div class="clearfix"></div>
       <div class="collapse" id="collapseExample">
         <ul class="nav">
-          <!-- <li>
+          <li>
             <a href="javascript:void(0)">
-              <span class="sidebar-mini-icon">MP</span>
-              <span class="sidebar-normal">My Profile</span>
+              <span class="sidebar-mini-icon">CP</span>
+              <span class="sidebar-normal"  routerLink="password">Change Password</span>
             </a>
           </li>
-          <li>
+           <!--<li>
             <a href="javascript:void(0)">
               <span class="sidebar-mini-icon">EP</span>
               <span class="sidebar-normal">Edit Profile</span>
@@ -88,8 +88,34 @@
             </li>
         </ul>
     </div> -->
-  <ul class="nav">
+  <ul class="nav" *ngIf="Roles == 'Admin'">
     <li routerLinkActive="active" *ngFor="let menuitem of menuItems">
+      <!--If is a single link-->
+      <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}</p>
+      </a>
+      <!--If it have a submenu-->
+      <a data-toggle="collapse" href="#{{menuitem.collapse}}" *ngIf="menuitem.type === 'sub'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}<b class="caret"></b></p>
+      </a>
+
+      <!--Display the submenu items-->
+      <div id="{{menuitem.collapse}}" class="collapse" *ngIf="menuitem.type === 'sub'">
+        <ul class="nav">
+          <li routerLinkActive="active" *ngFor="let childitem of menuitem.children">
+            <a [routerLink]="[menuitem.path, childitem.path]">
+              <span class="sidebar-mini-icon">{{childitem.ab}}</span>
+              <span class="sidebar-normal">{{childitem.title}}</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+  <ul class="nav" *ngIf="Roles == 'Employee'">
+    <li routerLinkActive="active" *ngFor="let menuitem of subAdminMenuItems">
       <!--If is a single link-->
       <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
         <i class="{{menuitem.icontype}}"></i>
