--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -359,42 +359,42 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label class="col-form-label">Customer Name</label>
                     <div class="form-group">
                         <input type="text" class="form-control" id="fname" [(ngModel)]="appointmentModel.fname "
                             name="fname" disabled />
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label class="col-form-label">Contact Number</label>
                     <div class="form-group">
                         <input type="text" class="form-control" id="fname" [(ngModel)]="appointmentModel.contact"
                             name="fname" disabled />
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label class="col-form-label">Whatsapp Number</label>
                     <div class="form-group">
                         <input type="text" class="form-control" id="fname" [(ngModel)]="appointmentModel.whatsapp"
                             name="fname" disabled />
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label class="col-form-label">Email Address</label>
                     <div class="form-group">
                         <input type="text" class="form-control" id="fname" [(ngModel)]="appointmentModel.email"
                             name="fname" disabled />
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label class="col-form-label">Gender</label>
                     <div class="form-group">
                         <input type="text" class="form-control" id="fname" [(ngModel)]="appointmentModel.gender"
                             name="fname" disabled />
                     </div>
                 </div>
-                <div class="col-md-3">
+                <!-- <div class="col-md-3">
                     <label class="col-form-label">Select Service</label>
                     <div class="btn-group bootstrap-select w-100">
                         <div style="border: 1px #DDDDDD solid !important">
@@ -424,28 +424,80 @@
                             </div>
                         </div>
                     </div>
+                </div> -->
+            </div>
+
+            <div class="row" *ngFor="let add of addService; let ind = index">
+                <div class="col-md-4">
+                    <label class="col-form-label">Select Service</label>
+                    <div class="dropdown form-group">
+                        <button class="dropdown-toggle btn btn btn btn-block" type="button" name="dropdownMenuButton"
+                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                            style="margin: 0px 0px !important;">
+                            {{ add.selectedServ }}
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-header">Select Service</div>
+                            <div *ngFor="let sl of servicesList">
+                                <a class="dropdown-item" (click)="selectServiceList(sl.id,ind)"
+                                    style="color:#252422 !important">{{sl.name}}</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label class="col-form-label">Select Team Member</label>
+                    <div class="dropdown form-group">
+                        <button class="dropdown-toggle btn btn btn btn-block" type="button" name="dropdownMenuButton"
+                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                            style="margin: 0px 0px !important;">
+                            {{ add.selectedEmp }}
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-header">Select Team Member</div>
+                            <div *ngFor="let e of employeeReg">
+                                <a class="dropdown-item" (click)="selectEmpList(e.id,ind)"
+                                    style="color:#252422 !important">{{e.fname}}
+                                    {{e.lname}}</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <i class="fa fa-plus-circle" aria-hidden="true" (click)="addServiceList(add)"
+                        style="font-size: 33px !important; margin-top: 47% !important"></i>
+                </div>
+                <div class="col-md-1" *ngIf="ind > 0">
+                    <i class="fa fa-times-circle" aria-hidden="true" (click)="removeServiceList(ind)" style="
+                        font-size: 33px !important;
+                        margin-top: 47% !important;
+                        margin-left: -80px !important;
+                      "></i>
                 </div>
             </div>
+
             <div class="table-responsive">
                 <table class="table">
                     <thead class="text-primary">
                         <th class="text-center">#</th>
                         <th class="text-center">Services Name</th>
+                        <th class="text-center">Employee Name</th>
                         <th class="text-center">Price</th>
                         <th class="text-center">Point</th>
                         <th class="text-center">Approx Time</th>
                         <th class="text-right">Actions</th>
                     </thead>
-                    <tbody>
-                        <tr *ngFor="let item of selServiceData; let i = index">
+                    <tbody  *ngIf="addService[0].serpoint !=null">
+                        <tr *ngFor="let item of addService; let i = index">
                             <td class="text-center">{{ i+1 }}</td>
-                            <td class="text-center">{{ item.itemName}} </td>
-                            <td class="text-center">{{ item.price }} ₹</td>
-                            <td class="text-center">{{ item.point }}</td>
-                            <td class="text-center">{{ item.time }}</td>
+                            <td class="text-center">{{ item.selectedServ}} </td>
+                            <td class="text-center">{{item.selectedEmp}}</td>
+                            <td class="text-center">{{ item.serprice }} ₹</td>
+                            <td class="text-center">{{ item.serpoint }}</td>
+                            <td class="text-center">{{ item.sertime }}</td>
                             <td class="text-right">
                                 <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm"
-                                    (click)="removeItem(item.id)">
+                                    (click)="removeItem(i)">
                                     <i class="fa fa-times"></i>
                                 </button>
                             </td>
@@ -501,8 +553,7 @@
                     <button type="button" class="btn btn-info btn-round" (click)="generateInvoicePDF()" hidden><i
                             class="fa fa-file-pdf-o"></i>
                         Invoice(PDF)</button>
-                    <button type="submit" class="btn btn-info btn-round" (click)="saveAppointmentDetails()"
-                        [disabled]="!selectedServices||!selectedEmp ">
+                    <button type="submit" class="btn btn-info btn-round" (click)="saveAppointmentDetails()">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
                     <button type="submit" class="btn btn-danger btn-round" (click)="backToCustomer()">
@@ -531,7 +582,7 @@
                 <table class="table">
                     <thead class="text-primary">
                         <th class="text-center">#</th>
-                        <th class="text-center">Employee Name</th>
+                        <!-- <th class="text-center">Employee Name</th> -->
                         <th class="text-center">Total Price</th>
                         <th class="text-center">Total Point</th>
                         <th class="text-center">Appointment Date</th>
@@ -541,7 +592,7 @@
                         <tr
                             *ngFor="let item of customerData |  paginate: { id:'listing_pagination',itemsPerPage: 5, currentPage: page,totalItems:totalRecords }">
                             <td class="text-center">{{ item.index }}</td>
-                            <td class="text-center">{{ item.empname}}</td>
+                            <!-- <td class="text-center">{{ item.empname}}</td> -->
                             <td class="text-center">{{ item.totalprice }}</td>
                             <td class="text-center">{{ item.totalpoint }}</td>
                             <td class="text-center">{{ item.createddate | date }}</td>
